--- a/first-website/index.html
+++ b/first-website/index.html
@@ -77,7 +77,7 @@
       <img src = "images/NewSpam.png"
       alt = "NewSpam" />
 
-      
+      <small>Send any business inquierys to Trash@gmail.com</small>
     </p>  
 
 <!--I try so hard to make the code look good but it just looks like a block of text-->
